--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple_chat",
   "version": "1.0.0",
   "description": "simple chat bot utilizing mongodb and socketio",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
