full project in ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,3 @@
 {
-    "compilerOptions": {
-        "module": "NodeNext",
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "ES2022",
-        "noImplicitAny": true,
-        "moduleResolution": "NodeNext",
-        "sourceMap": true,
-        "outDir": "dist",
-        "baseUrl": "."}
-        ,"extends": "@tsconfig/node20/tsconfig.json"}
+"extends": "@tsconfig/node20/tsconfig.json"
+    }
